# twsorter

./: .gitignore  Cargo.toml  README.md  twsorter.config.yaml
prettier-plugin/: ast.json  index.html  index.js
prettier-plugin/src/: index.js  tailwind.js
src/: config.rs  main.rs  plugins.rs  script.rs  sort.rs
src/sort/: tw_class.rs
twsorter/: Cargo.toml
twsorter-benchmark/: Cargo.toml
twsorter-benchmark/src/: ast.json  classes_order.json  main.rs  states_order.json
twsorter-cli/: Cargo.toml
twsorter-cli/src/: main.rs  script.js  script.rs
twsorter-wasm/: Cargo.toml
twsorter-wasm/src/: ast.rs  lib.rs
twsorter/src/: files.rs  lib.rs  plugins.rs  sort.rs  twconfig.rs
twsorter/src/config/: glob_pattern.rs  mod.rs  pattern.rs
twsorter/src/plugins/: schema.rs
