[package]
name = "twsorter-cli"
version = "0.1.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
glob = "0.3"
home = "0.5"
serde_json = "1.0"
twsorter = { path = "../twsorter", features = ["file"] }
tokio = { version = "1", features = ["full"] }
